# xous-core

./: .gitignore  Cargo.toml
apps/: manifest.json
apps/gb/: Cargo.toml
apps/gb/src/: main.rs
apps/hello/: Cargo.toml
apps/hello/src/: main.rs
apps/irc/: Cargo.toml
apps/irc/src/: cmds.rs  irc.rs  main.rs  repl.rs  user_data.rs
apps/pddbdisk/: Cargo.toml
apps/pddbdisk/src/: flash_drive.rs  main.rs
apps/pddbman/: Cargo.toml
apps/pddbman/src/: main.rs
apps/vault/: Cargo.toml
apps/vault/src/: main.rs  storage.rs
apps/vault/src/ctap/hid/: mod.rs
apps/vault/src/env/xous/: mod.rs
apps/wallet/: Cargo.toml
apps/wallet/cosmos-rust/cosmrs/: Cargo.toml
apps/wallet/simple-server/: Cargo.toml
apps/wallet/simple-server/src/: lib.rs  request.rs
apps/wallet/src/: cosmos.rs  main.rs  webserver.rs
apps/wallet/tendermint-rs/tendermint/: Cargo.toml
services/graphics-server/src/: lib.rs
services/log-server/: Cargo.toml
services/log-server/src/: lib.rs  main.rs  tcplogger.rs
services/net/src/api/: tcp.rs
services/shellchat/src/: main.rs
services/status/src/: main.rs
xtask/src/: main.rs
