[package]
authors = ["Sean Cross <sean@xobs.io>"]
description = "Log output program"
edition = "2018"
name = "log-server"
version = "0.1.0"

# Dependency policy: fully specify dependencies to the minor version number
[dependencies]
log = "0.4.14"
num-derive = {version = "0.3.3", default-features = false}
num-traits = {version = "0.2.14", default-features = false}
once_cell = "1.10.0"
xous = {path = "../../xous-rs"}
xous-ipc = {path = "../../xous-ipc"}

[target.'cfg(not(any(windows,unix)))'.dependencies]
utralib = {path = "../../utralib"}

[features]
debugprint = [] # adding this allocates the UART for debugging the logger
logging = [] # adding this allocates the hardware UART for console interactions
tcp_logging = [] # adding this opens a socket on port 65535 on which the device prints logs
                 # it's no-op in hosted mode, useful to debug apps on physical device without serial cables 
#default = []
default = ["logging", "tcp_logging"]
# default = ["debugprint", "logging"]
