[package]
name = "simple-server"
version = "0.4.0"
license = "MIT/Apache-2.0"
authors = ["steveklabnik <steve@steveklabnik.com>", "ashleygwilliams <ashley666ashley@gmail.com>"]
description = "a simple webserver."
repository = "https://github.com/steveklabnik/simple-server"
readme = "README.md"
categories = ["web-programming"]

[badges]
travis-ci = { repository = "steveklabnik/simple-server" }

[dependencies]
http = "0.1.0"
httparse = "1.2.3"
log = "0.3"
num_cpus = "1"
scoped_threadpool = "0.1.7"

#[target.'cfg(any(windows,unix))'.dependencies]
#chrono = {version = "0.4.19", default-features = false, features = ["std"]}

[dev-dependencies]
env_logger = "0.3"
#chrono = "0.4.19"
